dev/non_executable_reasons_record/745.txt
3.7
Python 3.7.3
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
from __future__ import print_function, division

% matplotlib inline

import thinkplot
from thinkbayes2 import Hist, Pmf, Suite, Cdf
------------------

[0;36m  File [0;32m"<ipython-input-1-274a509afcaf>"[0;36m, line [0;32m6[0m
[0;31m    [0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-274a509afcaf>, line 6)

Executability                            : False
